--- a/RestApi/src/main/resources/application.properties
+++ b/RestApi/src/main/resources/application.properties
@@ -1,3 +1,15 @@
 spring.application.name=RestApi
 
+# port config
+server.port=8090
+
+#DB Config
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:file:~/mkk_secur_2025;AUTO_SERVER=TRUE
+spring.datasource.username=sa
+spring.datasource.password=sa
+
+# JPA Config
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
 
